fixed flex align

--- a/client/app/styles/base.scss
+++ b/client/app/styles/base.scss
@@ -55,7 +55,7 @@ input.ng-dirty.ng-invalid {
 }
 
 .txt-flex-center {
-  justify-content: center;
+  align-content: center;
   flex-direction: column;
 }
 
